turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:13: error: not found: value Clor
	quart(Clor.Black)
              ^